--- a/sections/header-4.liquid
+++ b/sections/header-4.liquid
@@ -909,6 +909,122 @@ input[type=search]::-webkit-search-cancel-button {
   font-weight: 700;
 }
 
+.js-cart-header-total {
+  display: flex;
+  justify-content: space-between;
+}
+
+.subtotal-text {
+  display:flex;
+  justify-content: space-between; 
+  font-weight: 700;
+}
+
+.left-cart-wishlist-section {
+  border-style: solid;
+  flex-direction: column;
+  flex-basis: 70%; 
+}
+
+#left-cart-subtotal {
+  padding-right: 5px;
+}
+
+.right-cart-section {
+  flex-direction: column;
+  flex-basis:22%;
+  min-width: 300px;
+}
+
+.promo-codes-section {
+	padding: 20px 20px;
+  margin-bottom: 1.25rem;
+  background: #f4f4f4;
+}
+
+#right-text-header{
+  font-weight: 600;
+
+}
+
+.discount-text-input-section {
+  display:flex;
+  flex-direction: row;
+  {% comment %} justify-content: space-between; {% endcomment %}
+  {% comment %} max-width: 100%; {% endcomment %}
+}
+
+.discount-text-input {
+  text-transform: uppercase;
+  width: 0px;
+  flex-basis: 100%;
+  padding-left: 10px;
+  margin-right: .7rem;
+  height: 30px;
+  background-color: #e2e2e2;
+  max-width: none;
+}
+
+.discount-submit-btn {
+  padding: 0px 10px;
+  height: 30px;
+  max-width: 90px;
+  {% comment %} font-size: .7rem; {% endcomment %}
+}
+
+#applied-discounts {
+  display:flex;
+  flex-wrap: wrap;
+}
+
+.discount-code-box {
+  padding: 0px 20px;
+  margin: 5px 5px 5px 0px; 
+  background-color: #d1d1d1;
+  text-transform: uppercase;
+}
+
+.order-summaray-section, .shipping-returns-section, .origami-help-section {
+  display:flex;
+  flex-direction: column;
+  margin-bottom: 1.25rem;
+	padding: 20px 20px;
+  background: #f4f4f4;
+}
+
+.right-cart-checkout-btn {
+  height: 55px;
+}
+
+.order-summaray-section .cart-break-line {
+  border-top: 1px solid grey;
+}
+
+.acepted-payments-section {
+  margin-top: 5px;
+	padding: 20px 20px;
+  text-align:center;
+  margin-bottom: 1.25rem;
+  background: #f4f4f4;
+}
+
+#right-payment-methods{ 
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; 
+  justify-content: center;
+  margin-left: 0px;
+}
+
+#right-payment-methods li svg{ 
+  height: 32px;
+  width: 50px; 
+}
+
+.free-shipping-top {
+  margin-bottom: 1rem;
+}
+
 .js-btn-viewmore {
   margin-top: 15px;
   display: block;
