commiting changes left section

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -11031,3 +11031,22 @@ a.text-primary:hover, a.text-primary:focus, a.text-primary:active {
 	-webkit-text-stroke:1px currentColor;
     -webkit-text-fill-color: transparent;
 }
+
+ul.site-footer__list {
+    margin-left: 0;
+}
+
+.position-relative, .cs-list {
+	list-style-type: none;
+}
+
+.position-relative {
+	margin: 10px 0px;
+	display: flex;
+	flex-direction: column;
+
+}
+
+.inner-position-relative {
+	list-style-type: disc;
+}
