--- a/sections/header-4.liquid
+++ b/sections/header-4.liquid
@@ -923,7 +923,6 @@ input[type=search]::-webkit-search-cancel-button {
 }
 
 .left-cart-wishlist-section {
-  border-style: solid;
   flex-direction: column;
   flex-basis: 70%; 
 }
@@ -1608,8 +1607,7 @@ p#left-cart-subtotal {
 /*main-wishlist.liquid*/
 .tab {
   overflow: hidden;
-  border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  border-bottom: 1px solid #ccc;
 }
 
 /* Style the buttons inside the tab */
@@ -1619,7 +1617,7 @@ p#left-cart-subtotal {
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
+  padding: 5px 16px;
   transition: 0.3s;
   font-size: 17px;
 }
@@ -1631,14 +1629,15 @@ p#left-cart-subtotal {
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: #f2f2f2;
+  border-bottom: 2px solid black;
 }
 
 /* Style the tab content */
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  border: 1px solid #ccc;
+  {% comment %} border: 1px solid #ccc; {% endcomment %}
   border-top: none;
 }
 /*aos*/
