--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="{{ settings.color_header_bg }}">
+    <meta name="google-site-verification" content="3jy2pYr3RT5zCdba4EaTENRcfJfzWV3WG8DTlE5JYH8" />
     <link rel="preload" href="{{ 'theme.css' | asset_url }}" as="style" type="text/css" >
     <link rel="preconnect" href="//cdn.shopify.com" crossorigin>
     <link rel="dns-prefetch" href="//cdn.shopify.com">
